wellesleynet/roles/k8s/files/firefly.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: firefly
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  serviceName: "firefly"
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
      - image: jc5x/firefly-iii:version-5.5.9
        imagePullPolicy: Always
        name: firefly
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: firefly
          mountPath: /var/www/html/storage/upload
          subPath: upload
      - image: postgres:12.5-alpine
        imagePullPolicy: Always
        name: firefly-postgres
        volumeMounts:
        - name: firefly
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command:
            - ls
            - /var/lib/postgresql/data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: firefly
        persistentVolumeClaim:
          claimName: firefly
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: firefly
spec:
  selector:
    app: firefly
  ports:
  - name: firefly
    port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
  - host: firefly.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: firefly
            port:
              number: 8080
  tls:
  - hosts:
    - firefly.kiski.co
    secretName: firefly-kiski-co-tls
